--- a/src/aktualizr_get/BUILD
+++ b/src/aktualizr_get/BUILD
@@ -5,9 +5,9 @@ package(default_visibility = ["//visibility:public"])
 cc_binary(
     name = "aktualizr_get",
     srcs = [
-        "main.cc",
         "get.cc",
-        "get.h"
+        "get.h",
+        "main.cc",
     ],
     includes = [
         ".",
@@ -18,4 +18,3 @@ cc_binary(
         "//src/libaktualizr",
     ],
 )
-
