Fix jsoncpp and build error

--- a/.github/workflows/ci2.yml
+++ b/.github/workflows/ci2.yml
@@ -24,6 +24,5 @@ jobs:
       - name: Build and test
         run: |
           set -ex
-          bazel fetch //...
-          bazel build //...
-          bazel test --test_output=errors //...
+          bazel build --sandbox_debug --compilation_mode=dbg --verbose_failures //...
+          bazel test --sandbox_debug --compilation_mode=dbg --verbose_failures --test_output=errors //...
