--- a/.github/workflows/ci2.yml
+++ b/.github/workflows/ci2.yml
@@ -24,5 +24,5 @@ jobs:
       - name: Build and test
         run: |
           set -ex
-          bazel build --sandbox_debug --compilation_mode=dbg --verbose_failures //...
-          bazel test --sandbox_debug --compilation_mode=dbg --verbose_failures --test_output=errors //...
+          bazel build //...
+          bazel test //...
