--- a/.github/workflows/ci2.yml
+++ b/.github/workflows/ci2.yml
@@ -24,5 +24,5 @@ jobs:
       - name: Build and test
         run: |
           set -ex
-          bazel build //...
-          bazel test //...
+          bazel build --platforms=@zig_sdk//platform:linux_amd64 //...
+          bazel test --platforms=@zig_sdk//platform:linux_amd64 //...
