--- a/tests/BUILD
+++ b/tests/BUILD
@@ -39,6 +39,7 @@ cc_library(
         "//src/libaktualizr",
         "//src/sota_tools:sota_tools_lib",
         "//src/uptane_generator:uptane_generator_lib",
+        "@boost//:process",
         "@gtest",
     ],
     alwayslink = True,
