--- a/.bazelrc
+++ b/.bazelrc
@@ -3,6 +3,8 @@ common --enable_bzlmod
 common --registry=https://raw.githubusercontent.com/bazelboost/registry/main
 common --registry=https://bcr.bazel.build
 
+common --@curl//:use_mbedtls=true
+
 build --incompatible_enable_cc_toolchain_resolution
 build --action_env BAZEL_DO_NOT_DETECT_CPP_TOOLCHAIN=1
 build --cxxopt='-std=c++20'
