--- a/.bazelrc
+++ b/.bazelrc
@@ -8,6 +8,7 @@ common --@curl//:use_mbedtls=true
 build --incompatible_enable_cc_toolchain_resolution
 build --action_env BAZEL_DO_NOT_DETECT_CPP_TOOLCHAIN=1
 build --cxxopt -std=c++20
+build --sandbox_add_mount_pair=/tmp
 
 # debug
 build:debug --verbose_failures
